chart_scales_simple for jamming

--- a/config/config.ini
+++ b/config/config.ini
@@ -66,6 +66,7 @@
   # 'harpwise quiz' for a description
   #
   display = chart-scales
+  display_jamming = chart-scales-simple
   comment = note
   add_scales = chord-i7,chord-iv7,chord-v7
   fast = true
