--- a/config/config.ini
+++ b/config/config.ini
@@ -3,7 +3,7 @@
 #
 # Please do not try to modify it; rather override values in
 #
-#   ~/harpwise/config.yaml
+#   ~/harpwise/config.ini
 #
 # ,which mirrors the structure of this file and will be created on
 # first invocation of harpwise.
@@ -38,7 +38,7 @@
 # Even if you do not change a value here and do not specify it as a
 # commandline-argument, you may change its values (at least in many
 # cases) interactively, while harpwise is running; type 'h' for help
-# on this.
+# on the available interactive keys.
 #
 # In this file, watch out for keys, that contain an underscore,
 # e.g. 'add_scales': their corresponding commandline-argument has a
@@ -66,8 +66,10 @@
   # 'harpwise quiz' for a description
   #
   display = chart-scales
+  # Used when option '--jamming' is given; may still be overriden by '--display'
   display_jamming = chart-scales-simple
   comment = note
+  # Show these scales in addition in display chart_scales (mode listen)
   add_scales = chord-i7,chord-iv7,chord-v7
   fast = true
   immediate = false
