roots for chord-scales

--- a/config/config.ini
+++ b/config/config.ini
@@ -70,7 +70,7 @@
   display_jamming = chart-scales-simple
   comment = note
   # Show these scales in addition in display chart_scales (mode listen)
-  add_scales = chord-i7,chord-iv7,chord-v7
+  add_scales = chord-i,chord-iv,chord-v
   fast = true
   immediate = false
   loop = true
