--- a/scales/richter/scale_blues_with_holes.yaml
+++ b/scales/richter/scale_blues_with_holes.yaml
@@ -1,5 +1,5 @@
 ---
-desc: the full blues scales over all octaves
+desc: the full blues scales over all octaves; second position
 short: b
 holes:
 - "+1"
@@ -20,3 +20,7 @@ holes:
 - "-9"
 - "+9"
 - "-10"
+roots:
+- "-2"
+- "+6"
+- "+9"
