--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -107,8 +107,10 @@ tools:
     print notes of major scale for given key
   progression, prog: |
     take a base and some semitone diffs, then spell them out
+  all-intervals, all-inters: |
+    print all known intervals against the given note or hole
   interval, inter: |
-    calculate and print interval between two notes
+    calculate and print interval between two notes or holes
   chords: |
     print chords i, iv and v for current key
   transcribe: |
